--- a/data_cleaning_initial.ipynb
+++ b/data_cleaning_initial.ipynb
@@ -21,6 +21,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 40949 entries, 0 to 40948\n",
+      "Data columns (total 16 columns):\n",
+      " #   Column                  Non-Null Count  Dtype \n",
+      "---  ------                  --------------  ----- \n",
+      " 0   video_id                40949 non-null  object\n",
+      " 1   trending_date           40949 non-null  object\n",
+      " 2   title                   40949 non-null  object\n",
+      " 3   channel_title           40949 non-null  object\n",
+      " 4   category_id             40949 non-null  int64 \n",
+      " 5   publish_time            40949 non-null  object\n",
+      " 6   tags                    40949 non-null  object\n",
+      " 7   views                   40949 non-null  int64 \n",
+      " 8   likes                   40949 non-null  int64 \n",
+      " 9   dislikes                40949 non-null  int64 \n",
+      " 10  comment_count           40949 non-null  int64 \n",
+      " 11  thumbnail_link          40949 non-null  object\n",
+      " 12  comments_disabled       40949 non-null  bool  \n",
+      " 13  ratings_disabled        40949 non-null  bool  \n",
+      " 14  video_error_or_removed  40949 non-null  bool  \n",
+      " 15  description             40379 non-null  object\n",
+      "dtypes: bool(3), int64(5), object(8)\n",
+      "memory usage: 4.2+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "us_data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -596,12 +635,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Getting the US category data\n",
     "us_category_data_raw = pd.read_json(\"./data/US_category_id.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 32 entries, 0 to 31\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column  Non-Null Count  Dtype \n",
+      "---  ------  --------------  ----- \n",
+      " 0   kind    32 non-null     object\n",
+      " 1   etag    32 non-null     object\n",
+      " 2   items   32 non-null     object\n",
+      "dtypes: object(3)\n",
+      "memory usage: 900.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "us_category_data_raw.info()"
    ]
   },
   {
