Univariate plotting of the data to understand the data a little bit more

--- a/data_cleaning_initial.ipynb
+++ b/data_cleaning_initial.ipynb
@@ -964,6 +964,113 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_data = pd.read_csv(\"./data/cleaned_data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 363372 entries, 0 to 363371\n",
+      "Data columns (total 26 columns):\n",
+      " #   Column                  Non-Null Count   Dtype  \n",
+      "---  ------                  --------------   -----  \n",
+      " 0   video_id                363372 non-null  object \n",
+      " 1   trending_date           363372 non-null  object \n",
+      " 2   title                   363372 non-null  object \n",
+      " 3   channel_title           363372 non-null  object \n",
+      " 4   category_id             363372 non-null  int64  \n",
+      " 5   publish_time            363372 non-null  object \n",
+      " 6   tags                    363372 non-null  object \n",
+      " 7   views                   363372 non-null  int64  \n",
+      " 8   likes                   363372 non-null  int64  \n",
+      " 9   dislikes                363372 non-null  int64  \n",
+      " 10  comment_count           363372 non-null  int64  \n",
+      " 11  thumbnail_link          363372 non-null  object \n",
+      " 12  comments_disabled       363372 non-null  bool   \n",
+      " 13  ratings_disabled        363372 non-null  bool   \n",
+      " 14  video_error_or_removed  363372 non-null  bool   \n",
+      " 15  description             344691 non-null  object \n",
+      " 16  region                  363372 non-null  object \n",
+      " 17  category_name           360662 non-null  object \n",
+      " 18  title_cleaned           326016 non-null  object \n",
+      " 19  channel_title_cleaned   325420 non-null  object \n",
+      " 20  trending_day            363372 non-null  object \n",
+      " 21  trending_month          363372 non-null  object \n",
+      " 22  publish_day             363372 non-null  object \n",
+      " 23  publish_hour            363372 non-null  int64  \n",
+      " 24  like_ratio              363372 non-null  float64\n",
+      " 25  comment_ratio           363372 non-null  float64\n",
+      "dtypes: bool(3), float64(2), int64(6), object(15)\n",
+      "memory usage: 64.8+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "clean_data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 363372 entries, 0 to 363371\n",
+      "Data columns (total 26 columns):\n",
+      " #   Column                  Non-Null Count   Dtype  \n",
+      "---  ------                  --------------   -----  \n",
+      " 0   video_id                363372 non-null  object \n",
+      " 1   trending_date           363372 non-null  object \n",
+      " 2   title                   363372 non-null  object \n",
+      " 3   channel_title           363372 non-null  object \n",
+      " 4   category_id             363372 non-null  int64  \n",
+      " 5   publish_time            363372 non-null  object \n",
+      " 6   tags                    363372 non-null  object \n",
+      " 7   views                   363372 non-null  int64  \n",
+      " 8   likes                   363372 non-null  int64  \n",
+      " 9   dislikes                363372 non-null  int64  \n",
+      " 10  comment_count           363372 non-null  int64  \n",
+      " 11  thumbnail_link          363372 non-null  object \n",
+      " 12  comments_disabled       363372 non-null  bool   \n",
+      " 13  ratings_disabled        363372 non-null  bool   \n",
+      " 14  video_error_or_removed  363372 non-null  bool   \n",
+      " 15  description             344691 non-null  object \n",
+      " 16  region                  363372 non-null  object \n",
+      " 17  category_name           360662 non-null  object \n",
+      " 18  title_cleaned           326016 non-null  object \n",
+      " 19  channel_title_cleaned   325420 non-null  object \n",
+      " 20  trending_day            363372 non-null  object \n",
+      " 21  trending_month          363372 non-null  object \n",
+      " 22  publish_day             363372 non-null  object \n",
+      " 23  publish_hour            363372 non-null  int64  \n",
+      " 24  like_ratio              363372 non-null  float64\n",
+      " 25  comment_ratio           363372 non-null  float64\n",
+      "dtypes: bool(3), float64(2), int64(6), object(15)\n",
+      "memory usage: 64.8+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "clean_data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
